# blk-rck-hack-feb-2026

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/: config.py  main.py
backend/api/v1/: router.py
backend/api/v1/models/: period.py  requests.py  responses.py  transaction.py
backend/api/v1/routers/: performance.py  returns.py  transactions.py
backend/api/v1/services/: investment_strategy.py  parser_service.py  performance_service.py  period_service.py  returns_service.py  tax_service.py  transaction_pipeline.py  validator_service.py
backend/core/: datetime_utils.py  logging.py  security.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: PerformanceDashboard.tsx  ReturnsCalculator.tsx  TransactionFilter.tsx  TransactionParser.tsx  TransactionValidator.tsx
frontend/src/types/: index.ts
test/: conftest.py  test_endpoints.py  test_parser.py  test_periods.py  test_returns.py  test_tax.py  test_validator.py
