[project]
name = "blk-hacking-ind-tejas-nakka"
version = "1.0.0"
description = "BlackRock Retirement Savings API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
    "psutil==6.1.1",
    "slowapi==0.1.9",
    "python-jose[cryptography]==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["test"]
